--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ xcuserdata/
 ## Other
 *.moved-aside
 *.xcuserstate
+*.xcworkspace
+.DS_Store
 
 ## Obj-C/Swift specific
 *.hmap
@@ -46,7 +48,8 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
+Podfile.lock
 
 # Carthage
 #
